# BeNiceSite

be-nice-site/: pyproject.toml
be-nice-site/be_nice_site/: manage.py
be-nice-site/be_nice_site/be_nice_site/: settings.py  urls.py
be-nice-site/src/: db.sqlite3
be-nice-site/src/be_nice_site/: asgi.py  settings.py  urls.py  wsgi.py
be-nice-site/src/mainsite/: admin.py  forms.py  models.py  urls.py  views.py
be-nice-site/src/mainsite/migrations/: 0001_initial.py  0002_genre_instrument_location_remove_band_genre_and_more.py  0002_make_defaults_venue.py  0003_make_defaults_for_choices.py  0003_make_defaults_instruments.py  0004_make_defaults_genre.py  0004_remove_band_membership_remove_bandmember_location_and_more.py  0005_bandmember_band.py  0005_make_defaults_bands.py  0006_make_defaults_gigs.py  0006_remove_gig_location_alter_bandmember_band_venue_and_more.py  0007_remove_bandmember_band_band_members.py
be-nice-site/src/mainsite/static/admin/css/: forms.css
be-nice-site/src/mainsite/static/mainsite/: main.css
be-nice-site/src/mainsite/static/mainsite/css/: main.css
be-nice-site/src/mainsite/templates/mainsite/: about.html  base.html  gigs.html  index.html
be-nice-site/src/mainsite/templates/mainsite/bands/: band_detail.html  bands.html
be-nice-site/src/mainsite/templates/mainsite/forms/: add_band_form.html  (+2 more)
be-nice-site/src/users/: forms.py  models.py  signals.py  views.py
be-nice-site/src/users/migrations/: 0001_initial.py
be-nice-site/src/users/templates/users/: login.html  logout.html  password_reset_done.html  profile.html  register.html
